--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,13 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
+  <link rel="icon" type="image/png" href="%PUBLIC_URL%/logo.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -41,7 +40,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;600&display=swap" rel="stylesheet" />
   <!-- fin  police pour appli -->
   <script type="text/javascript"
-    src="//maps.googleapis.com/maps/api/js?key=AIzaSyAURsom7c-jmbNERN0wVqb4OzVten2Hy24&language=en&libraries=places">
+    src="//maps.googleapis.com/maps/api/js?key=AIzaSyClzfRZ5qM3CATcR0nkSKRbjmgQRZbUr-Y&language=en&libraries=places">
   </script>
 </head>
 
